Refactored Filtering
Refactored methods related to displaying filtered transaction lists.
Implemented use of predicates to reduce redundency of original code.

Minor cleanup of code, adding spacing for better readability.

Removed instruction comments from the reports menu code.